@@ -8,6 +8,7 @@
     * New Ninestalgia CSS
     * Support for GameFAQs' new signature system
     * Show QuickPost for mods in closed topics
+    * Update GFPastel 2010 CSS
 
 2010-10-06:
     * version 0.7.10
